--- a/src/styles/sass/components/_navigation.scss
+++ b/src/styles/sass/components/_navigation.scss
@@ -12,6 +12,7 @@
 
     @media screen and (max-width: 1024px) {
         min-height: 80vh;
+        left: 1rem;
     }
 
     @media screen and (max-width: 740px) {
@@ -19,7 +20,6 @@
         max-width: 100%;
         justify-content: space-between;
         min-height: 0;
-        position: relative;
     }
 
     .logo {
