--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -42,9 +42,9 @@
   cursor: pointer;
   text-decoration: none;
 }
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 740px) {
   .navigation-wrapper .logo a {
-    font-size: 24px;
+    font-size: 16px;
   }
 }
 .navigation-wrapper .logo a:hover {
@@ -72,11 +72,16 @@
   font-size: 24px;
   display: block;
 }
+@media screen and (max-width: 740px) {
+  .navigation-wrapper .navigation .nav-tab {
+    font-size: 14px;
+  }
+}
 .navigation-wrapper .navigation .nav-tab a {
   text-decoration: none;
   cursor: pointer;
 }
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 740px) {
   .navigation-wrapper .navigation .nav-tab a {
     font-size: 14px;
   }
@@ -84,19 +89,12 @@
 @media screen and (max-width: 740px) {
   .navigation-wrapper .navigation .nav-tab {
     display: inline-block;
+    padding-left: 12px;
   }
 }
 .navigation-wrapper .navigation .nav-tab:hover {
   color: #a3322e;
   transition: ease-in-out 0.5s;
-}
-.navigation-wrapper .navigation .nav-tab.active a {
-  font-size: 24px;
-}
-@media screen and (max-width: 540px) {
-  .navigation-wrapper .navigation .nav-tab.active a {
-    font-size: 18px;
-  }
 }
 @media screen and (max-width: 1024px) {
   .navigation-wrapper .navigation {
@@ -105,7 +103,6 @@
 }
 @media screen and (max-width: 740px) {
   .navigation-wrapper .navigation {
-    padding-top: 1.5rem;
     padding-bottom: 1.5rem;
   }
 }
@@ -143,7 +140,7 @@
   .wrapper {
     display: flex;
     flex-direction: column;
-    margin-top: 1rem;
+    margin-top: 5.5rem;
   }
 }
 
@@ -490,7 +487,7 @@
 @media screen and (max-width: 1240px) {
   #contact-page .image-content {
     margin: 0 auto;
-    width: 70%;
+    width: 100%;
   }
 }
 @media screen and (width: 1366px), screen and (height: 1024px) {
