--- a/src/styles/sass/components/_navigation.scss
+++ b/src/styles/sass/components/_navigation.scss
@@ -35,8 +35,8 @@
 
             @include a-tag();
 
-            @media screen and (max-width: 540px) {
-                font-size: 24px;
+            @media screen and (max-width: 740px) {
+                font-size: 16px;
             }
 
             &:hover {
@@ -67,17 +67,23 @@
 
             @include li-tag();
 
+            @media screen and (max-width: 740px) {
+                font-size: 14px;
+            }
+
             a {
                 @include a-tag();
                 cursor: pointer;
 
-                @media screen and (max-width: 540px) {
+                @media screen and (max-width: 740px) {
                     font-size: 14px;
                 }
+
             }
 
             @media screen and (max-width: 740px) {
                 display: inline-block;
+                padding-left: 12px;
             }
 
             &:hover {
@@ -86,22 +92,11 @@
             }
         }
 
-        .nav-tab.active {
-            a {
-                font-size: 24px;
-
-                @media screen and (max-width: 540px) {
-                    font-size: 18px;
-                }
-            }
-        }
-
         @media screen and (max-width: 1024px) {
             padding-bottom: 0;
         }
 
         @media screen and (max-width: 740px) {
-            padding-top: 1.5rem;
             padding-bottom: 1.5rem;
         }
     }
