--- a/src/styles/sass/components/_navigation.scss
+++ b/src/styles/sass/components/_navigation.scss
@@ -74,6 +74,8 @@
             a {
                 @include a-tag();
                 cursor: pointer;
+                color: inherit;
+                font-size: inherit;
 
                 @media screen and (max-width: 740px) {
                     font-size: 14px;
@@ -86,6 +88,10 @@
                 padding-left: 12px;
             }
 
+            @media screen and (max-width: 400px) {
+                padding-left: 5px;
+            }
+
             &:hover {
                 color: #a3322e;
                 transition: ease-in-out 0.5s;
@@ -93,10 +99,16 @@
         }
 
         @media screen and (max-width: 1024px) {
-            padding-bottom: 0;
+            padding-bottom: 20;
         }
 
         @media screen and (max-width: 740px) {
+            margin-left: 5rem;
+            padding-bottom: 1.5rem;
+        }
+
+        @media screen and (max-width: 400px) {
+            margin-left: 1.5rem;
             padding-bottom: 1.5rem;
         }
     }
