--- a/src/styles/sass/components/_navigation.scss
+++ b/src/styles/sass/components/_navigation.scss
@@ -20,6 +20,7 @@
         max-width: 100%;
         justify-content: space-between;
         min-height: 0;
+        height: fit-content;
     }
 
     .logo {
